--- a/view/store/mainStore.html
+++ b/view/store/mainStore.html
@@ -423,7 +423,7 @@ $(document).ready(function() {
         $('.top_slider, .store_main_head, .submenu_wrap').show();
         $('.top_slider').css('visibility','visible');
         getProductSortList(setPdata(0));
-        getProductSortCount(setPdata(3)); //페이징
+        //getProductSortCount(setPdata(3)); //페이징
         $('.store_head').hide();
     }else{
         $('.store_head span').text(category);
