--- a/view/community/storyDetail.html
+++ b/view/community/storyDetail.html
@@ -375,6 +375,7 @@
         sessionId = '';
     };
 
+    let cardUserSeq = 0;
 
     let existLike = "";
 
@@ -383,6 +384,7 @@
         let tagColor = "";
         let tagHomeType = "";
         let tagStyle = "";
+        
 
         // 신고하기 버튼 클릭
         $("#goAdmin").click(function(){
@@ -492,6 +494,7 @@
                     tagColor = data.tagColor;
                     tagHomeType = data.tagHomeType;
                     tagStyle = data.tagStyle;
+                    cardUserSeq = data.userSeq;
                 },
                 error: function () {
                     alert('getCardDetail() error');
@@ -1012,8 +1015,8 @@
         
     }
 
+    // 게시글 삭제
     function deleteStory() {
-
 
         if(confirm("정말 삭제하시겠습니까?") == true) {
             $.ajax({
@@ -1021,7 +1024,7 @@
                 type: "post",
                 data: {
                     "cardSeq": seq,
-                    "userSeq": sessionId.userSeq
+                    "userSeq": cardUserSeq
                 },
                 success: function (data) {
                     if (data == "suc") {
