--- a/view/store/order.html
+++ b/view/store/order.html
@@ -840,6 +840,9 @@ element.clientHeight = h;
 
 let myPoint = 0;
 
+let userName = "";
+let userSeq = "";
+
 
 $(document).ready(function() {
     $('#_dlvy_req3').hide(); //배송요청사항 직접입력 숨기기/펼치기
@@ -882,6 +885,9 @@ $(document).ready(function() {
                 let myEmail = data.email.split('@');
                 $('#_email1').val(myEmail[0]);
                 $('#_email2').val(myEmail[1]);
+                $('#_name').val(data.userName);
+                userName = data.userName;
+                userSeq = data.userSeq;
                 myPoint = data.mileage;
             },
             error: function() {
@@ -1115,6 +1121,7 @@ $(document).ready(function() {
         console.log(method)
     });
 
+
     // 결제버튼 클릭
     $('.payment_btn').click(function(){
 
@@ -1150,9 +1157,36 @@ $(document).ready(function() {
         if(method==''){
             alert('결제수단을 선택해주세요')
         }else{
+            saveUserName();
             requestPay(method,jdata); //아임포트 결제 실행
         }
     })
+
+
+
+    // 계정에 본명 등록이 안되었을 때, 결제 시 저장
+    function saveUserName() {
+        if(userName == null && $('#_name').val().length != 0) {
+            $.ajax({
+                url: "http://192.168.0.231:3000/saveUserName",
+                type: "get",
+                data: {
+                    "userName": $('#_name').val(),
+                    "userSeq": userSeq
+                },
+                success: function(data) {
+                    if(data == "suc") console.log('계정에 본명 등록 완료');
+                },
+                error: function() {
+                    alert('saveUserName Error');
+                }
+            })
+            
+        }
+    }
+
+
+
 
 
     // 임시 결제버튼 클릭 (나중에 삭제)
@@ -1241,13 +1275,9 @@ $(document).ready(function() {
                     url: "http://192.168.0.231:3000/paymentAf",
                     type: "post",
                     data: jdata,
-                    success: function (data) {
-                        console.log(data)
-                        if (data == "suc") {
-                            location.href = "orderAf.html";
-                        } else {
-                            alert('결제실패');
-                        }
+                    success: function (orderSeq) {
+                        location.href = "orderAf.html?seq="+orderSeq;
+                        
                     },
                     error: function () {
                         alert('paymentAf error');
