--- a/view/admin/mainAdmin.html
+++ b/view/admin/mainAdmin.html
@@ -129,7 +129,7 @@ body{
     margin: 20px 50px;
     padding: 20px;
     border-radius: 5px;
-    background-color: #35ab6f;
+    background-color: #dee2e6f7;
     justify-content: center;
     z-index: 2;
     color: white;
@@ -176,6 +176,7 @@ body{
 .chartdiv {
     width: 100%;
     height: 300px;
+    z-index: 10000;
 }
 
 </style>
@@ -260,8 +261,8 @@ body{
                     </div>
                     <div class="chart_content">
                         <div class="chart_texts">
-                            <span class="c_title">일별 판매액</span>
-                            <span class="c_text">전날 대비 12% 증가</span>
+                            <span class="c_title" id="salesPrice">일별 판매액</span>
+                            <span class="c_text" id="salesPriceText"></span>
                         </div>
                         <div class="chart_footer">
                             <span name="term_week"></span>
@@ -564,7 +565,8 @@ function barChart(){
                 app = JSON.parse(app);
                 am4core.ready(function() {
 
-                    am4core.useTheme(am4themes_dark);
+   // Themes begin
+am4core.useTheme(am4themes_material);
 am4core.useTheme(am4themes_animated);
 // Themes end
 
@@ -602,7 +604,6 @@ series.columns.template.adapter.add("fill", function(fill, target){
 
 categoryAxis.sortBySeries = series;
 chart.data = app;
-
                 }); // end am4core.ready()
             
         },error:function(){
@@ -610,7 +611,9 @@ chart.data = app;
         }
     })
 }
+
 salesCompare();
+// 판매 개수 비교
 function salesCompare(){
 
 let now = new Date();	// 현재 날짜 및 시간
@@ -640,7 +643,12 @@ let yesterday = year+"-"+month+"-"+yesterdate;
 
             let ySales = $("#hiddenNum0").val();    // 어제 판매 갯수
             let tSales =$("#hiddenNum1").val();     // 오늘 판매 갯수
-            
+            if(tSales==undefined){
+                tSales=0;
+            }
+            if(ySales==undefined){
+                ySales=0;
+            }
             let sales = tSales - ySales;
 
 
@@ -659,9 +667,67 @@ let yesterday = year+"-"+month+"-"+yesterdate;
             alert("error");
         }
     })
-
 }
 
+// 매출액 비교
+salesPrice();
+function salesPrice(){
+
+    let now = new Date();	// 현재 날짜 및 시간
+
+    let year = now.getFullYear();	// 연도
+
+    let month = now.getMonth()+1;	// 월
+
+    let date = now.getDate();	// 일
+    let yesterdate = now.getDate()-1;	// 일
+
+    let today = year+"-"+month+"-"+date;
+    let yesterday = year+"-"+month+"-"+yesterdate;
+
+
+    $.ajax({
+        url:"http://localhost:3000/salesPrice",
+        type:"post",
+        data:{"sDate":yesterday, "eDate":today },
+        success:function(list){
+            alert(JSON.stringify(list));
+            $.each(list,function(i,val){
+                $("#salesPrice").append("<input type='hidden' id='hiddenPrice"+i+"' value='"+val.count+"'>");
+            })
+
+            let ySalesPrice = $("#hiddenPrice0").val();    // 어제 판매 갯수
+            let tSalesPrice =$("#hiddenPrice1").val();     // 오늘 판매 갯수
+
+            if(tSalesPrice==undefined){
+                tSalesPrice=0;
+            }
+            if(ySalesPrice==undefined){
+                ySalesPrice=0;
+            }
+
+            let salesPrice = tSalesPrice - ySalesPrice;
+
+
+            if(salesPrice<0){
+                $("#salesPriceText").css("color","blue");
+                $("#salesPriceText").append(makeComma(ySalesPrice)+"원→"+makeComma(tSalesPrice) + "원 = 전날 대비 <b style='font-size:18px'>"+makeComma(salesPrice)+"원 ↓</b> 감소");
+            }else{
+                $("#salesPriceText").css("color","red");
+                $("#salesPriceText").append(makeComma(ySalesPrice)+"원→"+makeComma(tSalesPrice) + "원 = 전날 대비 <b style='font-size:18px'>"+makeComma(salesPrice)+"원 ↑</b> 증가");
+            }
+
+
+        },error:function(){
+            alert("salesPrice error");
+        }
+    })
+}
+// 콤마 삽입
+function makeComma(str) {
+    str = String(str);
+    return str.replace(/(\d)(?=(?:\d{3})+(?!\d))/g, '$1,');
+};
 
 
 </script>
