--- a/view/commons/search.html
+++ b/view/commons/search.html
@@ -114,7 +114,7 @@
     <div class="search_store py-5 pl-4">
         <div class="context_head">
             <div><h4><strong>스토어 <span></span></strong></h4></div>
-            <div><a href="#none">더보기 <i class="fas fa-caret-right"></i></a></div>
+            <div><a href="../store/mainStore.html">더보기 <i class="fas fa-caret-right"></i></a></div>
         </div>
         <div class="row search_store_main my-5"></div>
     </div>
@@ -122,7 +122,7 @@
     <div class="search_story py-5 pl-4">
         <div class="context_head">
             <div><h4><strong>스토리 <span></span></strong></h4></div>
-            <div><a href="#none">더보기 <i class="fas fa-caret-right"></i></a></div>
+            <div><a href="../community/story.html">더보기 <i class="fas fa-caret-right"></i></a></div>
         </div>
         <div class="row search_story_main my-5 pl-2"></div>
     </div>
@@ -130,7 +130,7 @@
     <div class="search_questions py-5 pl-4">
         <div class="context_head">
             <div><h4><strong>질문과 답변 <span></span></strong></h4></div>
-            <div><a href="#none">더보기 <i class="fas fa-caret-right"></i></a></div>
+            <div><a href="../community/questions.html">더보기 <i class="fas fa-caret-right"></i></a></div>
         </div>
         <div class="search_question_main my-3 mx-0 px-3"></div>
     </div>
